NEXT-18801 - Improve behavior in search setting

--- a/src/Administration/Resources/app/administration/src/app/component/modal/sw-search-preferences-modal/sw-search-preferences-modal.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/modal/sw-search-preferences-modal/sw-search-preferences-modal.html.twig
@@ -24,7 +24,10 @@
     >
         <template #column-active="{ item }">
             {% block sw_search_preferences_modal_grid_column_active %}
-            <sw-checkbox-field v-model="item._searchable" />
+            <sw-checkbox-field
+                v-model="item._searchable"
+                @change="onChangeSearchPreference(item)"
+            />
             {% endblock %}
         </template>
 
