--- a/src/Administration/Resources/app/administration/src/module/sw-profile/view/sw-profile-index-search-preferences/sw-profile-index-search-preferences.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-profile/view/sw-profile-index-search-preferences/sw-profile-index-search-preferences.html.twig
@@ -59,6 +59,7 @@
                         <sw-checkbox-field
                             v-model="searchPreference._searchable"
                             :label="getModuleTitle(searchPreference.entityName)"
+                            @change="onChangeSearchPreference(searchPreference)"
                         />
                         <ul class="sw-profile-index-search-preferences-searchable-elements__entity">
                             <li
