NEXT-18129 - add extension-api cabability to cards and add DevTools support for the new ExtensionAPI

--- a/src/Administration/Resources/app/administration/src/app/component/structure/sw-hidden-iframes/sw-hidden-iframes.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/structure/sw-hidden-iframes/sw-hidden-iframes.html.twig
@@ -1,12 +1,11 @@
 <div
     class="sw-hidden-iframes"
-    style="display: none"
+    style="display: none;"
 >
-    <iframe
+    <sw-iframe-renderer
         v-for="iFrame in iFrames"
         :key="iFrame"
-        :title="iFrame"
         :src="iFrame"
-        frameborder="0"
-    ></iframe>
+        :location-id="MAIN_HIDDEN"
+    />
 </div>
