--- a/src/Administration/Resources/app/administration/src/module/sw-product/component/sw-product-properties/sw-product-properties.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-product/component/sw-product-properties/sw-product-properties.html.twig
@@ -11,6 +11,7 @@
         <sw-card
             class="sw-product-properties__card"
             :class="{ 'is-inherited': isInherited }"
+            position-identifier="sw-product-properties"
             :is-loading="isLoading"
         >
             <template #title>
