--- a/src/Administration/Resources/app/administration/src/app/component/base/sw-card/sw-card.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/base/sw-card/sw-card.html.twig
@@ -1,74 +1,86 @@
 {% block sw_card %}
-<div
-    class="sw-card"
-    :class="cardClasses"
->
-    {% block sw_card_title %}
-    <slot name="title">
-        <div
-            v-if="title"
-            class="sw-card__title"
-        >
-            {{ title }}
-        </div>
-    </slot>
-    {% endblock %}
+<sw-ignore-class ref="swIgnoreClass">
+    <sw-extension-component-section
+        v-if="positionIdentifier"
+        :position-id="positionIdentifier + '__before'"
+    />
 
-    {% block sw_card_subtitle %}
-    <slot name="subtitle">
-        <div
-            v-if="subtitle"
-            class="sw-card__subtitle"
-        >
-            {{ subtitle }}
-        </div>
-    </slot>
-    {% endblock %}
-
-    <slot name="tabs"></slot>
-
-    {% block sw_card_toolbar %}
     <div
-        v-if="!!$slots.toolbar"
-        class="sw-card__toolbar"
+        class="sw-card"
+        :class="cardClasses()"
     >
-        {% block sw_card_toolbar_inner %}
-        <slot name="toolbar">
-            {% block sw_card_slot_toolbar %}{% endblock %}
+        {% block sw_card_title %}
+        <slot name="title">
+            <div
+                v-if="title"
+                class="sw-card__title"
+            >
+                {{ title }}
+            </div>
         </slot>
         {% endblock %}
-    </div>
-    {% endblock %}
 
-    {% block sw_card_content %}
-    <div class="sw-card__content">
+        {% block sw_card_subtitle %}
+        <slot name="subtitle">
+            <div
+                v-if="subtitle"
+                class="sw-card__subtitle"
+            >
+                {{ subtitle }}
+            </div>
+        </slot>
+        {% endblock %}
+
+        <slot name="tabs"></slot>
+
+        {% block sw_card_toolbar %}
         <div
-            v-if="!!$slots['context-actions'] || !!$scopedSlots['context-actions']"
-            class="sw-card__context-menu"
+            v-if="!!$slots.toolbar"
+            class="sw-card__toolbar"
         >
-            <sw-context-button>
-                <slot name="context-actions">
-                    {% block sw_card_slot_context_menu_actions %}{% endblock %}
-                </slot>
-            </sw-context-button>
-        </div>
-        <slot>
-            {% block sw_card_slot_default %}{% endblock %}
-        </slot>
-        <slot
-            name="grid"
-            :title="title"
-        >
-            {% block sw_card_slot_grid %}{% endblock %}
-        </slot>
-        <slot name="footer">
-            {% block sw_card_slot_footer %}{% endblock %}
-        </slot>
-
-        {% block sw_card_loader %}
-        <sw-loader v-if="isLoading" />
+            {% block sw_card_toolbar_inner %}
+            <slot name="toolbar">
+            {% block sw_card_slot_toolbar %}{% endblock %}
+            </slot>
         {% endblock %}
-    </div>
+        </div>
+        {% endblock %}
+
+        {% block sw_card_content %}
+        <div class="sw-card__content">
+            <div
+                v-if="!!$slots['context-actions'] || !!$scopedSlots['context-actions']"
+                class="sw-card__context-menu"
+            >
+                <sw-context-button>
+                    <slot name="context-actions">
+                    {% block sw_card_slot_context_menu_actions %}{% endblock %}
+                    </slot>
+                </sw-context-button>
+            </div>
+            <slot>
+            {% block sw_card_slot_default %}{% endblock %}
+            </slot>
+            <slot
+                name="grid"
+                :title="title"
+            >
+            {% block sw_card_slot_grid %}{% endblock %}
+            </slot>
+            <slot name="footer">
+            {% block sw_card_slot_footer %}{% endblock %}
+            </slot>
+
+            {% block sw_card_loader %}
+            <sw-loader v-if="isLoading" />
+        {% endblock %}
+        </div>
     {% endblock %}
-</div>
+    </div>
+
+    <sw-extension-component-section
+        v-if="positionIdentifier"
+        :position-id="positionIdentifier + '__after'"
+    />
+</sw-ignore-class>
 {% endblock %}
