NEXT-19080 - Fix Search ranking is inconsistent between grid and bubble

--- a/src/Administration/Resources/app/administration/src/module/sw-product/page/sw-product-list/sw-product-list.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-product/page/sw-product-list/sw-product-list.html.twig
@@ -76,7 +76,7 @@
                 :allow-edit="acl.can('product.editor')"
                 :allow-delete="acl.can('product.deleter')"
                 :allow-inline-edit="acl.can('product.editor')"
-                :sort-by="sortBy"
+                :sort-by="currentSortBy"
                 :sort-direction="sortDirection"
                 :natural-sorting="naturalSorting"
                 :criteria-limit="limit"
