NEXT-18862 - Expand first level of the category tree by default

--- a/src/Administration/Resources/app/administration/src/module/sw-category/component/sw-category-tree/sw-category-tree.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-category/component/sw-category-tree/sw-category-tree.html.twig
@@ -13,6 +13,7 @@
         :on-change-route="changeCategory"
         :disable-context-menu="disableContextMenu"
         :allow-delete-categories="allowDelete"
+        initially-expanded-root
         @batch-delete="deleteCheckedItems"
         @delete-element="onDeleteCategory"
         @drag-end="onUpdatePositions"
@@ -22,7 +23,8 @@
     >
 
         <template slot="headline">
-            <span></span></template>
+            <span></span>
+        </template>
 
         {% block sw_category_tree_items %}
         <template
