NEXT-18745 - Inline text-editor bugs and move toolbar with scroll

--- a/src/Administration/Resources/app/administration/src/app/component/form/sw-text-editor/sw-text-editor.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/form/sw-text-editor/sw-text-editor.html.twig
@@ -78,6 +78,7 @@
                 @paste="onPaste"
                 @blur="emitContent"
                 @input="onContentChange"
+                @copy="onCopy"
                 v-html="$sanitize(content, { ADD_ATTR: ['target'] })"
             ></div>
             <div
