NEXT-18949 - FE implement generate actions and modal for flow actions app

--- a/src/Administration/Resources/app/administration/src/app/component/form/sw-form-field-renderer/sw-form-field-renderer.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/form/sw-form-field-renderer/sw-form-field-renderer.html.twig
@@ -6,6 +6,7 @@
     v-model="currentValue"
     class="sw-form-field-renderer"
     @change="emitChange"
+    @input="emitUpdate"
 >
     {% block sw_form_field_renderer_scope_slots %}
     <!-- eslint-disable vue/v-slot-style -->
