NEXT-18187 - Move admin dashboard stats in component

--- a/src/Administration/Resources/app/administration/src/app/component/structure/sw-hidden-iframes/sw-hidden-iframes.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/structure/sw-hidden-iframes/sw-hidden-iframes.html.twig
@@ -1,4 +1,7 @@
-<div class="sw-hidden-iframes" style="display: none">
+<div
+    class="sw-hidden-iframes"
+    style="display: none"
+>
     <iframe
         v-for="iFrame in iFrames"
         :key="iFrame"
