--- a/src/Administration/Resources/app/administration/src/module/sw-product/component/sw-product-basic-form/sw-product-basic-form.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-product/component/sw-product-basic-form/sw-product-basic-form.html.twig
@@ -48,8 +48,8 @@
                     :error="productManufacturerIdError"
                     :placeholder="$tc('sw-product.basicForm.placeholderManufacturer')"
                     show-clearable-button
-                    :creatable="true"
-                    :entity-creation-label="$tc('sw-product.basicForm.labelManufacturer')"
+                    :allow-entity-creation="feature.isActive('FEATURE_NEXT_17546')"
+                    :entity-creation-label="$tc('sw-product.basicForm.labelManufacturerCreation')"
                     @change="updateCurrentValue"
                 />
 
