NEXT-19321 - Add examples to Script services references

--- a/src/Docs/Resources/templates/Scripts/service-reference.md.twig
+++ b/src/Docs/Resources/templates/Scripts/service-reference.md.twig
@@ -33,7 +33,17 @@
 **Type**: `{{ method.return.type }}`
 
 {{ method.return.description }}
+{% endif %}
 
+{% if method.examples is not empty %}
+#### Examples
+
+{% for example in method.examples %}
+{{ example.description }}
+```{{ example.extension }}
+{{ example.src|raw }}
+```
+{% endfor %}
 {% endif %}
 {% endfor %}
 
