--- a/src/Administration/Resources/app/administration/src/module/sw-product/page/sw-product-detail/sw-product-detail.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-product/page/sw-product-detail/sw-product-detail.html.twig
@@ -143,6 +143,7 @@
         <sw-tabs
             v-if="productId"
             class="sw-product-detail-page__tabs"
+            position-identifier="sw-product-detail"
         >
             {% block sw_product_detail_content_tabs_general %}
             <sw-tabs-item
