NEXT-19135 - Fix google product compariosn template shipping currency

--- a/src/Core/Migration/Fixtures/productComparison-export-profiles/next-19135/body_old.xml.twig
+++ b/src/Core/Migration/Fixtures/productComparison-export-profiles/next-19135/body_old.xml.twig
@@ -28,6 +28,6 @@
     <g:shipping>
         <g:country>DE</g:country>
         <g:service>Standard</g:service>
-        <g:price>4.95 {{ context.currency.isoCode }}{# change your default delivery costs #}</g:price>
+        <g:price>{{ 4.95|currency }}{# change your default delivery costs #}</g:price>
     </g:shipping>
 </item>
