--- a/src/Administration/Resources/app/administration/src/module/sw-product/view/sw-product-detail-reviews/sw-product-detail-reviews.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-product/view/sw-product-detail-reviews/sw-product-detail-reviews.html.twig
@@ -116,10 +116,7 @@
             >
         </template>
 
-        <template
-            v-if="feature.isActive('FEATURE_NEXT_17546')"
-            #actions
-        >
+        <template #actions>
             {% block sw_product_detail_reviews_empty_state_button %}
             <sw-button
                 variant="ghost"
