--- a/src/Administration/Resources/app/administration/src/module/sw-import-export/component/sw-import-export-activity/sw-import-export-activity.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-import-export/component/sw-import-export-activity/sw-import-export-activity.html.twig
@@ -73,7 +73,7 @@
                 v-else
                 rounded
             />
-            {{ getStateLabel(item.state) }}
+            <span :class="getStateClass(item.state)">{{ getStateLabel(item.state) }}</span>
         </template>
         {% endblock %}
 
