--- a/src/Administration/Resources/app/administration/src/module/sw-import-export/component/sw-import-export-activity/sw-import-export-activity.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-import-export/component/sw-import-export-activity/sw-import-export-activity.scss
@@ -1,3 +1,5 @@
+@import "~scss/mixins";
+
 .sw-import-export-activity {
     .sw-import-export-activity__invalid-records-help-text {
         margin-left: 10px;
@@ -5,6 +7,15 @@
 
     .sw-color-badge {
         margin: 0 10px 0 0;
+    }
+
+    &__progress-indicator {
+        @include animated-truncate();
+
+        &::after {
+            right: 0;
+            transform: translateX(calc(100% + 4px));
+        }
     }
 }
 
