--- a/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
@@ -86,6 +86,7 @@
 
     {% block sw_order_line_items_grid_grid %}
     <sw-data-grid
+        ref="dataGrid"
         class="sw-order-line-items-grid__data-grid"
         identifier="sw-order-line-item-grid"
         :data-source="orderLineItems"
