NEXT-18430 - Remove unnecessary rule specifier in dpg

--- a/src/Administration/Resources/app/administration/src/module/sw-product-stream/component/sw-product-stream-field-select/sw-product-stream-field-select.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-product-stream/component/sw-product-stream-field-select/sw-product-stream-field-select.html.twig
@@ -1,5 +1,6 @@
 {% block sw_condition_base_field_condition %}
 <sw-arrow-field
+    v-if="options.length > 1"
     class="sw-product-stream-field-select"
     primary="#758ca3"
     secondary="#ffffff"
