--- a/src/Administration/Resources/app/administration/src/app/component/structure/sw-search-bar/sw-search-bar.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/structure/sw-search-bar/sw-search-bar.scss
@@ -211,6 +211,10 @@ $sw-search-bar-types-item-border-radius: $border-radius-default;
         border-radius: $sw-search-bar-border-radius;
         box-shadow: $sw-search-bar-results-box-shadow;
 
+        &.is-empty-state {
+            min-height: 80px;
+        }
+
         @media screen and (max-width: 1360px) {
             right: 15px;
             left: 15px;
