NEXT-18627 - Add grouped select component

--- a/src/Administration/Resources/app/administration/src/app/component/rule/sw-condition-base/sw-condition-base.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/rule/sw-condition-base/sw-condition-base.html.twig
@@ -7,7 +7,7 @@
     >
         {% block sw_condition_base_field_condition %}
         <sw-condition-type-select
-            v-bind="{ condition, availableTypes, hasError }"
+            v-bind="{ condition, availableTypes, hasError, availableGroups }"
             :disabled="disabled"
         />
         {% endblock %}
