--- a/src/Administration/Resources/app/administration/src/module/sw-product/component/sw-product-properties/sw-product-properties.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-product/component/sw-product-properties/sw-product-properties.html.twig
@@ -216,8 +216,7 @@
         <sw-product-add-properties-modal
             v-if="showAddPropertiesModal"
             :new-properties="newProperties"
-            @update-new-properties-item="updateNewPropertiesItem"
-            @add-new-properties-item="addNewPropertiesItem"
+            :properties-available="propertiesAvailable"
             @modal-cancel="onCancelAddPropertiesModal"
             @modal-save="onSaveAddPropertiesModal"
         />
