--- a/src/Administration/Resources/app/administration/src/app/component/base/sw-property-search/sw-property-search.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/base/sw-property-search/sw-property-search.scss
@@ -87,6 +87,10 @@
     .sw-property-search__search-selection .sw-grid-column .sw-grid__cell-content {
         min-height: 0;
         padding: 0;
+
+        .sw-field__checkbox {
+            margin-left: 15px;
+        }
     }
 
     .sw-property-search__search-selection .sw-grid.sw-grid--table .sw-grid-row {
